--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -26,7 +26,7 @@
 </header>
 
 <!-- Contact Section -->
-<section class="contact-section">
+<section id="contact-section" class="contact-section">
     <h2 class="section-title">Contactează-ne</h2>
     <p class="contact-subtitle">Suntem aici pentru orice întrebare sau nelămurire pe care o ai</p>
 
@@ -92,7 +92,7 @@
 </section>
 
 <!-- FAQ Section -->
-<section class="faq-section">
+<section id="faq-section" class="faq-section">
     <h2 class="section-title">Întrebări Frecvente</h2>
     <div class="faq-container">
         <div class="faq-item">
@@ -126,6 +126,31 @@
     </div>
 </section>
 
+<section id="terms-section" class="info-section">
+    <h2 class="section-title">Termeni și Condiții</h2>
+    <div class="info-content">
+        <h3>1. Rezervări</h3>
+        <p>Toate rezervările sunt supuse disponibilității...</p>
+
+        <h3>2. Politica de anulare</h3>
+        <p>Anulările trebuie făcute cu cel puțin 48 de ore înainte...</p>
+
+        <!-- Adaugă mai multe puncte după necesitate -->
+    </div>
+</section>
+
+<section id="privacy-section" class="info-section">
+    <h2 class="section-title">Politica de Confidențialitate</h2>
+    <div class="info-content">
+        <h3>Datele colectate</h3>
+        <p>Colectăm doar informațiile necesare pentru procesarea rezervărilor...</p>
+
+        <h3>Securitatea datelor</h3>
+        <p>Toate datele sunt stocate în siguranță și nu sunt partajate...</p>
+    </div>
+</section>
+
+
 <!-- Footer -->
 <footer>
     <div class="footer-content">
@@ -137,10 +162,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="#">Termeni și Condiții</a>
-            <a href="#">Politica de Confidențialitate</a>
-            <a href="#">Politica de Anulare</a>
-            <a href="#">Întrebări Frecvente</a>
+            <a href="contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="contact.html#contact-section">Contact</a>
+            <a href="contact.html#terms-section">Termeni și Condiții</a>
+            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
