--- a/src/main/resources/static/gallery.html
+++ b/src/main/resources/static/gallery.html
@@ -167,10 +167,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="#">Termeni și Condiții</a>
-            <a href="#">Politica de Confidențialitate</a>
-            <a href="#">Politica de Anulare</a>
-            <a href="#">Întrebări Frecvente</a>
+            <a href="contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="contact.html#contact-section">Contact</a>
+            <a href="contact.html#terms-section">Termeni și Condiții</a>
+            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
