--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -103,7 +103,7 @@
 <section class="testimonials-section">
     <div class="section-header">
         <h2 class="section-title">Părerea Oaspeților</h2>
-        <p class="section-subtitle">Ce spun vizitatorii noștri</p>
+        <h3 class="section-subtitle">Ce spun vizitatorii noștri</h3>
     </div>
     <div class="testimonials-slider">
         <div class="testimonial active">
@@ -151,7 +151,7 @@
 <section class="gallery-section">
     <div class="section-header">
         <h2 class="section-title">Galerie Foto</h2>
-        <p class="section-subtitle">Explorează frumusețea cabanelor noastre</p>
+        <h3 class="section-subtitle">Explorează frumusețea cabanelor noastre</h3>
     </div>
     <div class="gallery-grid">
         <div class="gallery-item large" style="background-image: url('images/cabana1.jpg')">
@@ -209,10 +209,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="#">Termeni și Condiții</a>
-            <a href="#">Politica de Confidențialitate</a>
-            <a href="#">Politica de Anulare</a>
-            <a href="#">Întrebări Frecvente</a>
+            <a href="contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="contact.html#contact-section">Contact</a>
+            <a href="contact.html#terms-section">Termeni și Condiții</a>
+            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
