--- a/src/main/resources/static/reservation.html
+++ b/src/main/resources/static/reservation.html
@@ -29,7 +29,7 @@
 <section class="reservation-section">
     <div class="reservation-container">
         <h2 class="section-title">Rezervă Cabana Ta</h2>
-        <p class="reservation-subtitle">Completează formularul de mai jos pentru a-ți asigura locul în acest colț de rai</p>
+        <h3 class="reservation-subtitle">Completează formularul de mai jos pentru a-ți asigura locul în acest colț de rai</h3>
 
         <form id="reservation-form" class="reservation-form">
             <div class="form-row">
@@ -78,10 +78,10 @@
             <div id="availability-message" class="availability-message"></div>
 
             <button type="submit" class="submit-btn">
-                <i class="fas fa-paper-plane"></i> Trimite Rezervarea
+                <i class="fas fa-paper-plane"></i> Trimite Rezervarea & Plătește Mai Târziu
             </button>
             <button type="button" id="pay-button" class="submit-btn">
-                <i class="fas fa-credit-card"></i> Plătește Online
+                <i class="fas fa-credit-card"></i> Trimite Rezervarea & Plătește Online
             </button>
 
 
@@ -149,10 +149,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="#">Termeni și Condiții</a>
-            <a href="#">Politica de Confidențialitate</a>
-            <a href="#">Politica de Anulare</a>
-            <a href="#">Întrebări Frecvente</a>
+            <a href="contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="contact.html#contact-section">Contact</a>
+            <a href="contact.html#terms-section">Termeni și Condiții</a>
+            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
