--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -54,27 +54,27 @@
         <div class="contact-map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.527767750872!2d23.727404776275506!3d47.61587137119071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4737d15cebab6b2d%3A0x92e8de46d15a426d!2sA-nuc-A!5e0!3m2!1sro!2sro!4v1751896160471!5m2!1sro!2sro" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"> width="200%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
-
+        <h3 class="section-title">Lasă-ne un mesaj!</h3>
         <form class="contact-form">
             <div class="form-row">
                 <div class="form-group">
                     <label for="name">Nume Complet</label>
-                    <input type="text" id="name" name="name" required>
+                    <input type="text" id="name" name="name" required placeholder="Scrieti aici numele...">
                 </div>
                 <div class="form-group">
                     <label for="email">Adresă Email</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" required placeholder="Scrieti aici email-ul...">
                 </div>
             </div>
 
             <div class="form-group">
                 <label for="subject">Subiect</label>
-                <input type="text" id="subject" name="subject" required>
+                <input type="text" id="subject" name="subject" required placeholder="Scrieti aici subiectul...">
             </div>
 
             <div class="form-group">
                 <label for="message">Mesaj</label>
-                <textarea id="message" name="message" rows="6" required></textarea>
+                <textarea id="message" name="message" rows="6" required placeholder="Scrieti aici mesajul dumneavoastra..."></textarea>
             </div>
 
             <button type="submit" class="submit-btn">
