--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -59,11 +59,11 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="name">Nume Complet</label>
-                    <input type="text" id="name" name="name" required placeholder="Scrieti aici numele...">
+                    <input type="text" id="name" name="name" required placeholder="ex: Mihai Popescu">
                 </div>
                 <div class="form-group">
                     <label for="email">Adresă Email</label>
-                    <input type="email" id="email" name="email" required placeholder="Scrieti aici email-ul...">
+                    <input type="email" id="email" name="email" required placeholder="ex: username@gmail.com">
                 </div>
             </div>
 
@@ -111,7 +111,7 @@
                 <i class="fas fa-chevron-down"></i>
             </button>
             <div class="faq-answer">
-                <p>Da, suntem prietenoși cu animalele de companie în anumite cabane. Vă rugăm să menționați acest lucru la rezervare.</p>
+                <p>Da, suntem prietenoși cu animalele de companie și există diverse jucării și activități pentru acestea. </p>
             </div>
         </div>
         <div class="faq-item">
@@ -130,12 +130,12 @@
     <h2 class="section-title">Termeni și Condiții</h2>
     <div class="info-content">
         <h3>1. Rezervări</h3>
-        <p>Toate rezervările sunt supuse disponibilității...</p>
+        <p>Toate rezervările sunt supuse disponibilității.</p>
 
         <h3>2. Politica de anulare</h3>
-        <p>Anulările trebuie făcute cu cel puțin 48 de ore înainte...</p>
+        <p>Anulările trebuie făcute cu cel puțin 48 de ore înainte, exclusiv prin email sau telefon.</p>
+        <p>Dacă a fost realizată deja plata în avans, banii vor fi restituiți clientului.</p>
 
-        <!-- Adaugă mai multe puncte după necesitate -->
     </div>
 </section>
 
@@ -143,10 +143,10 @@
     <h2 class="section-title">Politica de Confidențialitate</h2>
     <div class="info-content">
         <h3>Datele colectate</h3>
-        <p>Colectăm doar informațiile necesare pentru procesarea rezervărilor...</p>
+        <p>Colectăm doar informațiile necesare pentru procesarea rezervărilor, și nu vor fi folosite în alte scopuri.</p>
 
         <h3>Securitatea datelor</h3>
-        <p>Toate datele sunt stocate în siguranță și nu sunt partajate...</p>
+        <p>Toate datele sunt stocate în siguranță și nu sunt partajate.</p>
     </div>
 </section>
 
@@ -173,7 +173,7 @@
                 <a href="https://www.facebook.com/share/16nfmyoENE/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/cabanele_a_nuc_a?igsh=MTd2eTRjOG9oZmxhOQ==" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-tripadvisor"></i></a>
+<!--                <a href="#"><i class="fab fa-tripadvisor"></i></a>-->
             </div>
         </div>
     </div>
