--- a/src/main/resources/static/gallery.html
+++ b/src/main/resources/static/gallery.html
@@ -30,7 +30,6 @@
     <h2 class="section-title">Galerie Foto</h2>
 
     <div class="gallery">
-        <!-- Cabana 1 -->
         <div class="gallery-item" onclick="openAlbum('cabana1')">
             <img src="images/cabana1.jpg" alt="Cabana No. 1" class="gallery-image">
             <div class="image-overlay">
@@ -38,7 +37,6 @@
             </div>
         </div>
 
-        <!-- Spațiu Living -->
         <div class="gallery-item" onclick="openAlbum('living')">
             <img src="images/interior4.jpg" alt="Spațiu Living" class="gallery-image">
             <div class="image-overlay">
@@ -46,7 +44,6 @@
             </div>
         </div>
 
-        <!-- Peisaj -->
         <div class="gallery-item" onclick="openAlbum('peisaj')">
             <img src="images/view3.jpg" alt="Peisaj Montan" class="gallery-image">
             <div class="image-overlay">
@@ -54,7 +51,6 @@
             </div>
         </div>
 
-        <!-- Drumeții -->
         <div class="gallery-item" onclick="openAlbum('drumetie')">
             <img src="images/Cabana4.jpg" alt="Drumeții" class="gallery-image">
             <div class="image-overlay">
@@ -62,7 +58,6 @@
             </div>
         </div>
 
-        <!-- Cabana 2 -->
         <div class="gallery-item" onclick="openAlbum('cabana2')">
             <img src="images/cabana2.jpg" alt="Cabana No. 2" class="gallery-image">
             <div class="image-overlay">
@@ -70,7 +65,6 @@
             </div>
         </div>
 
-        <!-- Dormitor -->
         <div class="gallery-item" onclick="openAlbum('dormitor')">
             <img src="images/interior2.jpg" alt="Cameră de Dormit" class="gallery-image">
             <div class="image-overlay">
@@ -80,7 +74,6 @@
     </div>
 </section>
 
-<!-- Albume (ascunse initial) -->
 <div id="cabana1-album" class="album">
     <div class="album-content">
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
@@ -178,7 +171,7 @@
                 <a href="https://www.facebook.com/share/16nfmyoENE/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/cabanele_a_nuc_a?igsh=MTd2eTRjOG9oZmxhOQ==" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-tripadvisor"></i></a>
+<!--                <a href="#"><i class="fab fa-tripadvisor"></i></a>-->
             </div>
         </div>
     </div>
