--- a/src/main/resources/static/reservation.html
+++ b/src/main/resources/static/reservation.html
@@ -160,7 +160,7 @@
                 <a href="https://www.facebook.com/share/16nfmyoENE/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook"></i></a>
                 <a href="https://www.instagram.com/cabanele_a_nuc_a?igsh=MTd2eTRjOG9oZmxhOQ==" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-tripadvisor"></i></a>
+<!--                <a href="#"><i class="fab fa-tripadvisor"></i></a>-->
             </div>
         </div>
     </div>
