--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -11,5 +11,6 @@
     <p>Plata ta a fost procesată cu succes.</p>
     <a href="index.html" class="btn">Înapoi la Pagina Principală</a>
 </div>
+<script src="app.js"></script>
 </body>
 </html>
