added admin interface

--- a/src/main/resources/static/client/cancel.html
+++ b/src/main/resources/static/client/cancel.html
@@ -9,7 +9,7 @@
 <div class="cancel-page">
     <h1>😞 Plata a fost anulată</h1>
     <p>Rezervarea ta nu a fost finalizată. Poți încerca din nou oricând.</p>
-    <a href="reservation.html" class="btn">Înapoi la Rezervări</a>
+    <a href="reservation/reservation.html" class="btn">Înapoi la Rezervări</a>
 </div>
 </body>
 </html>
