--- a/src/main/resources/static/client/contact/contact.html
+++ b/src/main/resources/static/client/contact/contact.html
@@ -5,21 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Cabanele A-nuc-A</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="contact.css">
 </head>
 <body>
 <!-- Header -->
 <header>
     <nav>
-        <a href="index.html" class="logo">
+        <a href="../index/index.html" class="logo">
             <i class="fas fa-home"></i> Cabanele A-nuc-A
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Acasă</a></li>
-            <li><a href="about.html">Despre Noi</a></li>
-            <li><a href="gallery.html">Galerie</a></li>
-            <li><a href="reservation.html">Rezervări</a></li>
+            <li><a href="../index/index.html">Acasă</a></li>
+            <li><a href="../about/about.html">Despre Noi</a></li>
+            <li><a href="../gallery/gallery.html">Galerie</a></li>
+            <li><a href="../reservation/reservation.html">Rezervări</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
@@ -180,6 +180,6 @@
     <p class="footer-bottom">&copy; 2025 Cabanele A-nuc-A. Toate drepturile rezervate.</p>
 </footer>
 
-<script src="app.js"></script>
+<script src="../app.js"></script>
 </body>
 </html>
