--- a/src/main/resources/static/client/index/index.html
+++ b/src/main/resources/static/client/index/index.html
@@ -6,7 +6,7 @@
     <title>Cabanele A-nuc-A - Refugiu Premium în Natură</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
@@ -19,10 +19,10 @@
         </a>
         <ul class="nav-links">
             <li><a href="index.html">Acasă</a></li>
-            <li><a href="about.html">Despre Noi</a></li>
-            <li><a href="gallery.html">Galerie</a></li>
-            <li><a href="reservation.html">Rezervări</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../about/about.html">Despre Noi</a></li>
+            <li><a href="../gallery/gallery.html">Galerie</a></li>
+            <li><a href="../reservation/reservation.html">Rezervări</a></li>
+            <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -31,26 +31,26 @@
 <!-- Hero Section -->
 <section class="hero">
     <div class="hero-slider">
-        <div class="slide active" style="background-image: url('images/cabana1.jpg')">
+        <div class="slide active" style="background-image: url('../../images/cabana1.jpg')">
             <div class="hero-content">
                 <h1>Evadare în <span>Natura</span> Pură</h1>
                 <p class="subtitle">Descoperă magia Munților Maramureșului în cabanele noastre premium</p>
                 <div class="hero-btns">
-                    <a href="reservation.html" class="cta-button primary">
+                    <a href="../reservation/reservation.html" class="cta-button primary">
                         <i class="fas fa-calendar-check"></i> Rezervă Acum
                     </a>
-                    <a href="gallery.html" class="cta-button secondary">
+                    <a href="../gallery/gallery.html" class="cta-button secondary">
                         <i class="fas fa-images"></i> Vezi Galeria
                     </a>
                 </div>
             </div>
         </div>
-        <div class="slide" style="background-image: url('images/ciubar3.jpg')">
+        <div class="slide" style="background-image: url('../../images/Ciubar3.jpg')">
             <div class="hero-content">
                 <h1>Lux <span>Autentic</span> în Natură</h1>
                 <p class="subtitle">Experiențe personalizate în inima Maramuresului</p>
                 <div class="hero-btns">
-                    <a href="reservation.html" class="cta-button primary">
+                    <a href="../reservation/reservation.html" class="cta-button primary">
                         <i class="fas fa-calendar-check"></i> Rezervă Acum
                     </a>
                     <a href="#features" class="cta-button secondary">
@@ -79,7 +79,7 @@
             </div>
             <h3>Locație Excepțională</h3>
             <p>Poziționată în inima Munților Maramureșului, cu priveliști panoramice uimitoare</p>
-            <div class="feature-image" style="background-image: url('images/view1.jpg')"></div>
+            <div class="feature-image" style="background-image: url('../../images/view1.jpg')"></div>
         </div>
         <div class="feature-card highlight">
             <div class="feature-icon">
@@ -87,7 +87,7 @@
             </div>
             <h3>Cazare Premium</h3>
             <p>Cabine moderne echipate cu toate facilitățile necesare pentru un sejur perfect</p>
-            <div class="feature-image" style="background-image: url('images/semineu.jpg')"></div>
+            <div class="feature-image" style="background-image: url('../../images/semineu.jpg')"></div>
         </div>
         <div class="feature-card">
             <div class="feature-icon">
@@ -95,7 +95,7 @@
             </div>
             <h3>Experiențe Unice</h3>
             <p>Activități în natură și tradiții locale autentice pentru amintiri de neuitat</p>
-            <div class="feature-image" style="background-image: url('images/view4.jpg')"></div>
+            <div class="feature-image" style="background-image: url('../../images/view4.jpg')"></div>
         </div>
     </div>
 </section>
@@ -155,34 +155,34 @@
         <h3 class="section-subtitle">Explorează frumusețea cabanelor noastre</h3>
     </div>
     <div class="gallery-grid">
-        <div class="gallery-item large" style="background-image: url('images/cabana1.jpg')">
+        <div class="gallery-item large" style="background-image: url('../../images/cabana1.jpg')">
             <div class="overlay">
                 <i class="fas fa-search-plus"></i>
             </div>
         </div>
-        <div class="gallery-item" style="background-image: url('images/cabana2.jpg')">
+        <div class="gallery-item" style="background-image: url('../../images/cabana2.jpg')">
             <div class="overlay">
                 <i class="fas fa-search-plus"></i>
             </div>
         </div>
-        <div class="gallery-item" style="background-image: url('images/cabana4.jpg')">
+        <div class="gallery-item" style="background-image: url('../../images/Cabana4.jpg')">
             <div class="overlay">
                 <i class="fas fa-search-plus"></i>
             </div>
         </div>
-        <div class="gallery-item" style="background-image: url('images/ciubar2.jpg')">
+        <div class="gallery-item" style="background-image: url('../../images/Ciubar2.jpg')">
             <div class="overlay">
                 <i class="fas fa-search-plus"></i>
             </div>
         </div>
-        <div class="gallery-item" style="background-image: url('images/interior4.jpg')">
+        <div class="gallery-item" style="background-image: url('../../images/interior4.jpg')">
             <div class="overlay">
                 <i class="fas fa-search-plus"></i>
             </div>
         </div>
     </div>
     <div class="section-footer">
-        <a href="gallery.html" class="cta-button">
+        <a href="../gallery/gallery.html" class="cta-button">
             <i class="fas fa-images"></i> Vezi Toată Galeria
         </a>
     </div>
@@ -193,7 +193,7 @@
     <div class="cta-content">
         <h2>Gata pentru o aventură de neuitat?</h2>
         <p>Rezervă acum și bucură-te de cele mai frumoase momente în inima naturii!</p>
-        <a href="reservation.html" class="cta-button white">
+        <a href="../reservation/reservation.html" class="cta-button white">
             <i class="fas fa-calendar-check"></i> Rezervă Cabana Ta
         </a>
     </div>
@@ -210,10 +210,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="contact.html#faq-section">Întrebări Frecvente</a>
-            <a href="contact.html#contact-section">Contact</a>
-            <a href="contact.html#terms-section">Termeni și Condiții</a>
-            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
+            <a href="../contact/contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="../contact/contact.html#contact-section">Contact</a>
+            <a href="../contact/contact.html#terms-section">Termeni și Condiții</a>
+            <a href="../contact/contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
@@ -228,6 +228,6 @@
     <p class="footer-bottom">&copy; 2025 Cabanele A-nuc-A. Toate drepturile rezervate.</p>
 </footer>
 
-<script src="app.js"></script>
+<script src="../app.js"></script>
 </body>
 </html>
