--- a/src/main/resources/static/client/success.html
+++ b/src/main/resources/static/client/success.html
@@ -9,7 +9,7 @@
 <div class="success-page">
     <h1>🎉 Mulțumim pentru rezervare!</h1>
     <p>Plata ta a fost procesată cu succes.</p>
-    <a href="index.html" class="btn">Înapoi la Pagina Principală</a>
+    <a href="index/index.html" class="btn">Înapoi la Pagina Principală</a>
 </div>
 <script src="app.js"></script>
 </body>
