--- a/src/main/resources/static/client/about/about.html
+++ b/src/main/resources/static/client/about/about.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Despre Noi - Cabanele A-nuc-A</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
 <!-- Header -->
 <header>
     <nav>
-        <a href="index.html" class="logo">
+        <a href="../index/index.html" class="logo">
             <i class="fas fa-home"></i> Cabanele A-nuc-A
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Acasă</a></li>
+            <li><a href="../index/index.html">Acasă</a></li>
             <li><a href="about.html">Despre Noi</a></li>
-            <li><a href="gallery.html">Galerie</a></li>
-            <li><a href="reservation.html">Rezervări</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../gallery/gallery.html">Galerie</a></li>
+            <li><a href="../reservation/reservation.html">Rezervări</a></li>
+            <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -43,7 +43,7 @@
         </div>
         <div class="about-image">
             <div class="gallery-item">
-                <div class="gallery-placeholder" style="background-image: url('images/view6.jpg')">
+                <div class="gallery-placeholder" style="background-image: url('../../images/view6.jpg')">
                     <!-- Imaginea va fi înlocuită cu una reală -->
                 </div>
             </div>
@@ -84,10 +84,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="contact.html#faq-section">Întrebări Frecvente</a>
-            <a href="contact.html#contact-section">Contact</a>
-            <a href="contact.html#terms-section">Termeni și Condiții</a>
-            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
+            <a href="../contact/contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="../contact/contact.html#contact-section">Contact</a>
+            <a href="../contact/contact.html#terms-section">Termeni și Condiții</a>
+            <a href="../contact/contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
@@ -102,6 +102,6 @@
     <p class="footer-bottom">&copy; 2025 Cabanele A-nuc-A. Toate drepturile rezervate.</p>
 </footer>
 
-<script src="app.js"></script>
+<script src="../app.js"></script>
 </body>
 </html>
