--- a/src/main/resources/static/client/gallery/gallery.html
+++ b/src/main/resources/static/client/gallery/gallery.html
@@ -5,22 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galerie - Cabanele A-nuc-A</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="gallery.css">
 </head>
 <body>
 <!-- Header -->
 <header>
     <nav>
-        <a href="index.html" class="logo">
+        <a href="../index/index.html" class="logo">
             <i class="fas fa-home"></i> Cabanele A-nuc-A
         </a>
         <ul class="nav-links">
-            <li><a href="index.html">Acasă</a></li>
-            <li><a href="about.html">Despre Noi</a></li>
+            <li><a href="../index/index.html">Acasă</a></li>
+            <li><a href="../about/about.html">Despre Noi</a></li>
             <li><a href="gallery.html">Galerie</a></li>
-            <li><a href="reservation.html">Rezervări</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="../reservation/reservation.html">Rezervări</a></li>
+            <li><a href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
@@ -31,42 +31,42 @@
 
     <div class="gallery">
         <div class="gallery-item" onclick="openAlbum('cabana1')">
-            <img src="images/cabana1.jpg" alt="Cabana No. 1" class="gallery-image">
+            <img src="../../images/cabana1.jpg" alt="Cabana No. 1" class="gallery-image">
             <div class="image-overlay">
                 <p>Cabana No. 1</p>
             </div>
         </div>
 
         <div class="gallery-item" onclick="openAlbum('living')">
-            <img src="images/interior4.jpg" alt="Spațiu Living" class="gallery-image">
+            <img src="../../images/interior4.jpg" alt="Spațiu Living" class="gallery-image">
             <div class="image-overlay">
                 <p>Spațiu Living</p>
             </div>
         </div>
 
         <div class="gallery-item" onclick="openAlbum('peisaj')">
-            <img src="images/view3.jpg" alt="Peisaj Montan" class="gallery-image">
+            <img src="../../images/view3.jpg" alt="Peisaj Montan" class="gallery-image">
             <div class="image-overlay">
                 <p>Peisaj Montan</p>
             </div>
         </div>
 
         <div class="gallery-item" onclick="openAlbum('drumetie')">
-            <img src="images/Cabana4.jpg" alt="Drumeții" class="gallery-image">
+            <img src="../../images/Cabana4.jpg" alt="Drumeții" class="gallery-image">
             <div class="image-overlay">
                 <p>Drumeții</p>
             </div>
         </div>
 
         <div class="gallery-item" onclick="openAlbum('cabana2')">
-            <img src="images/cabana2.jpg" alt="Cabana No. 2" class="gallery-image">
+            <img src="../../images/cabana2.jpg" alt="Cabana No. 2" class="gallery-image">
             <div class="image-overlay">
                 <p>Cabana No. 2</p>
             </div>
         </div>
 
         <div class="gallery-item" onclick="openAlbum('dormitor')">
-            <img src="images/interior2.jpg" alt="Cameră de Dormit" class="gallery-image">
+            <img src="../../images/interior2.jpg" alt="Cameră de Dormit" class="gallery-image">
             <div class="image-overlay">
                 <p>Cameră de Dormit</p>
             </div>
@@ -79,10 +79,10 @@
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
         <h2 class="album-title">Cabana No. 1</h2>
         <div class="album-grid">
-            <img src="images/cabana1.jpg" alt="Cabana 1 - vedere 1" class="album-img">
-            <img src="images/cabana2.jpg" alt="Cabana 1 - vedere 2" class="album-img">
-            <img src="images/view1.jpg" alt="Cabana 1 - vedere 3" class="album-img">
-            <img src="images/view6.jpg" alt="Cabana 1 - vedere 4" class="album-img">
+            <img src="../../images/cabana1.jpg" alt="Cabana 1 - vedere 1" class="album-img">
+            <img src="../../images/cabana2.jpg" alt="Cabana 1 - vedere 2" class="album-img">
+            <img src="../../images/view1.jpg" alt="Cabana 1 - vedere 3" class="album-img">
+            <img src="../../images/view6.jpg" alt="Cabana 1 - vedere 4" class="album-img">
         </div>
     </div>
 </div>
@@ -92,9 +92,9 @@
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
         <h2 class="album-title">Spațiu Living</h2>
         <div class="album-grid">
-            <img src="images/interior1.jpg" alt="Living - vedere 1" class="album-img">
-            <img src="images/semineu.jpg" alt="Living - vedere 2" class="album-img">
-            <img src="images/interior4.jpg" alt="Living - vedere 3" class="album-img">
+            <img src="../../images/interior1.jpg" alt="Living - vedere 1" class="album-img">
+            <img src="../../images/semineu.jpg" alt="Living - vedere 2" class="album-img">
+            <img src="../../images/interior4.jpg" alt="Living - vedere 3" class="album-img">
         </div>
     </div>
 </div>
@@ -105,9 +105,9 @@
         <h2 class="album-title">Peisaj Montan</h2>
         <div class="album-grid">
             <img src="images/ciubar3.jpg" alt="Peisaj 1" class="album-img">
-            <img src="images/view2.jpg" alt="Peisaj 2" class="album-img">
-            <img src="images/view3.jpg" alt="Peisaj 3" class="album-img">
-            <img src="images/view4.jpg" alt="Peisaj 4" class="album-img">
+            <img src="../../images/view2.jpg" alt="Peisaj 2" class="album-img">
+            <img src="../../images/view3.jpg" alt="Peisaj 3" class="album-img">
+            <img src="../../images/view4.jpg" alt="Peisaj 4" class="album-img">
         </div>
     </div>
 </div>
@@ -117,9 +117,9 @@
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
         <h2 class="album-title">Drumeții</h2>
         <div class="album-grid">
-            <img src="images/Cabana3Iarna.jpg" alt="Drumeție 1" class="album-img">
-            <img src="images/view5.jpg" alt="Drumeție 2" class="album-img">
-            <img src="images/view1.jpg" alt="Drumeție 3" class="album-img">
+            <img src="../../images/Cabana3Iarna.jpg" alt="Drumeție 1" class="album-img">
+            <img src="../../images/view5.jpg" alt="Drumeție 2" class="album-img">
+            <img src="../../images/view1.jpg" alt="Drumeție 3" class="album-img">
         </div>
     </div>
 </div>
@@ -129,10 +129,10 @@
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
         <h2 class="album-title">Cabana No. 2</h2>
         <div class="album-grid">
-            <img src="images/interior1.jpg" alt="Cabana 2 - vedere 1" class="album-img">
-            <img src="images/interior2.jpg" alt="Cabana 2 - vedere 2" class="album-img">
-            <img src="images/interior3.jpg" alt="Cabana 2 - vedere 3" class="album-img">
-            <img src="images/interior4.jpg" alt="Cabana 2 - vedere 4" class="album-img">
+            <img src="../../images/interior1.jpg" alt="Cabana 2 - vedere 1" class="album-img">
+            <img src="../../images/interior2.jpg" alt="Cabana 2 - vedere 2" class="album-img">
+            <img src="../../images/interior3.jpg" alt="Cabana 2 - vedere 3" class="album-img">
+            <img src="../../images/interior4.jpg" alt="Cabana 2 - vedere 4" class="album-img">
         </div>
     </div>
 </div>
@@ -142,9 +142,9 @@
         <span class="close-btn" onclick="closeAlbum()">&times;</span>
         <h2 class="album-title">Cameră de Dormit</h2>
         <div class="album-grid">
-            <img src="images/interior2.jpg" alt="Dormitor 1" class="album-img">
-            <img src="images/semineu.jpg" alt="Dormitor 2" class="album-img">
-            <img src="images/interior3.jpg" alt="Dormitor 3" class="album-img">
+            <img src="../../images/interior2.jpg" alt="Dormitor 1" class="album-img">
+            <img src="../../images/semineu.jpg" alt="Dormitor 2" class="album-img">
+            <img src="../../images/interior3.jpg" alt="Dormitor 3" class="album-img">
         </div>
     </div>
 </div>
@@ -160,10 +160,10 @@
         </div>
         <div class="footer-section">
             <h3>Informații</h3>
-            <a href="contact.html#faq-section">Întrebări Frecvente</a>
-            <a href="contact.html#contact-section">Contact</a>
-            <a href="contact.html#terms-section">Termeni și Condiții</a>
-            <a href="contact.html#privacy-section">Politica de Confidențialitate</a>
+            <a href="../contact/contact.html#faq-section">Întrebări Frecvente</a>
+            <a href="../contact/contact.html#contact-section">Contact</a>
+            <a href="../contact/contact.html#terms-section">Termeni și Condiții</a>
+            <a href="../contact/contact.html#privacy-section">Politica de Confidențialitate</a>
         </div>
         <div class="footer-section">
             <h3>Urmărește-ne</h3>
@@ -178,6 +178,6 @@
     <p class="footer-bottom">&copy; 2025 Cabanele A-nuc-A. Toate drepturile rezervate.</p>
 </footer>
 
-<script src="app.js"></script>
+<script src="../app.js"></script>
 </body>
 </html>
