--- a/src/main/resources/static/admin/reservations.html
+++ b/src/main/resources/static/admin/reservations.html
@@ -36,36 +36,26 @@
 
         <div class="card">
             <div class="table-responsive">
-                <table>
+                <table id="reservations-table">
                     <thead>
                     <tr>
-                        <th>ID</th>
-                        <th>Client</th>
-                        <th>Cabana</th>
+                        <th>Id</th>
+                        <th>Nume</th>
+                        <th>Email</th>
                         <th>Check-in</th>
                         <th>Check-out</th>
-                        <th>Status</th>
-                        <th>Acțiuni</th>
+                        <th>Tip Cabana</th>
+                        <th>Total Pret</th>
+                        <th>Metoda de plata</th>
+                        <th>Platit</th>
                     </tr>
                     </thead>
-                    <tbody>
-                    <tr>
-                        <td>#1254</td>
-                        <td>Maria Popescu</td>
-                        <td>Cabana Bradul</td>
-                        <td>15 Aug 2025</td>
-                        <td>20 Aug 2025</td>
-                        <td><span class="status confirmed">Confirmată</span></td>
-                        <td>
-                            <button class="btn-icon"><i class="fas fa-edit"></i></button>
-                            <button class="btn-icon"><i class="fas fa-trash"></i></button>
-                        </td>
-                    </tr>
-                    </tbody>
+                    <tbody></tbody>
                 </table>
             </div>
         </div>
     </main>
 </div>
+<script src="admin.js"></script>
 </body>
 </html>
