added dashboard stats

--- a/src/main/resources/static/admin/dashboard.html
+++ b/src/main/resources/static/admin/dashboard.html
@@ -20,7 +20,7 @@
             <li><a href="dashboard.html" class="active"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="reservations.html"><i class="fas fa-calendar-check"></i> Rezervări</a></li>
             <li><a href="settings.html"><i class="fas fa-cog"></i> Setări</a></li>
-            <li><a href="#"><i class="fas fa-sign-out-alt"></i> Deconectare</a></li>
+            <li><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Deconectare</a></li>
         </ul>
     </aside>
 
@@ -29,8 +29,8 @@
         <div class="header">
             <h1>Dashboard</h1>
             <div class="user-info">
-                <span>Bun venit, Admin</span>
-                <img src="https://via.placeholder.com/40" alt="User" style="border-radius: 50%; margin-left: 10px;">
+                <span>Bun venit, <span id="usernameDisplay">Admin</span></span>
+<!--                <img src="https://via.placeholder.com/40" alt="User" style="border-radius: 50%; margin-left: 10px;">-->
             </div>
         </div>
 
@@ -39,34 +39,48 @@
                 <h2><i class="fas fa-chart-line"></i> Statistici</h2>
                 <div class="stats-grid">
                     <div class="stat-card">
-                        <h3>25</h3>
+                        <h3 id="activeReservations">0</h3>
                         <p>Rezervări active</p>
                     </div>
                     <div class="stat-card">
-                        <h3>1.250€</h3>
+                        <h3 id="monthlyIncome">0€</h3>
                         <p>Venit lunar</p>
                     </div>
                     <div class="stat-card">
-                        <h3>4.8</h3>
-                        <p>Rating mediu</p>
+                        <h3 id="occupancyRate">0%</h3>
+                        <p>Rata de ocupare</p>
                     </div>
                 </div>
             </div>
 
             <div class="card">
-                <h2><i class="fas fa-bell"></i> Notificări recente</h2>
-                <ul class="notifications">
-                    <li>
-                        <i class="fas fa-calendar-plus"></i>
-                        <span>Nouă rezervare de la Maria Popescu</span>
-                        <small>acum 2 ore</small>
-                    </li>
-                    <li>
-                        <i class="fas fa-star"></i>
-                        <span>Recenzie nouă de la Ion Ionescu</span>
-                        <small>acum 1 zi</small>
-                    </li>
+                <div class="card-header">
+                    <h2><i class="fas fa-bell"></i> Notificări recente</h2>
+                    <button class="btn btn-primary" id="refreshBtn">
+                        <i class="fas fa-sync-alt"></i> Actualizează
+                    </button>
+                </div>
+                <ul class="notifications" id="notificationsList">
                 </ul>
+            </div>
+
+            <div class="card">
+                <h2><i class="fas fa-calendar-day"></i> Rezervări recente</h2>
+                <div class="table-responsive">
+                    <table id="recentReservations">
+                        <thead>
+                        <tr>
+                            <th>Nume</th>
+                            <th>Cabana</th>
+                            <th>Check-in</th>
+                            <th>Check-out</th>
+                            <th>Status</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </main>
