--- a/src/main/resources/static/admin/reservations.html
+++ b/src/main/resources/static/admin/reservations.html
@@ -19,7 +19,7 @@
             <li><a href="dashboard.html"><i class="fas fa-tachometer-alt"></i> Dashboard</a></li>
             <li><a href="reservations.html" class="active"><i class="fas fa-calendar-check"></i> Rezervări</a></li>
             <li><a href="settings.html"><i class="fas fa-cog"></i> Setări</a></li>
-            <li><a href="#"><i class="fas fa-sign-out-alt"></i> Deconectare</a></li>
+            <li><a href="#" onclick="logout()"><i class="fas fa-sign-out-alt"></i> Deconectare</a></li>
         </ul>
     </aside>
 
@@ -48,6 +48,7 @@
                         <th>Total Pret</th>
                         <th>Metoda de plata</th>
                         <th>Platit</th>
+                        <th>Actiuni</th>
                     </tr>
                     </thead>
                     <tbody></tbody>
