--- a/src/main/resources/static/admin/login.html
+++ b/src/main/resources/static/admin/login.html
@@ -16,23 +16,32 @@
             <p>Panou de administrare</p>
         </div>
 
-        <form action="dashboard.html" method="post">
+        <form id="loginForm">
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" class="form-control" placeholder="ex: admin@anuca.ro" required>
+                <label for="username">Nume utilizator</label>
+                <input type="text" id="username" class="form-control" placeholder="Introdu numele de utilizator" required>
             </div>
 
             <div class="form-group">
                 <label for="password">Parolă</label>
-                <input type="password" id="password" class="form-control" placeholder="Introdu parola" required>
+                <div style="position: relative;">
+                    <input type="password" id="password" class="form-control" placeholder="Introdu parola" required>
+                    <i class="fas fa-eye" id="togglePassword" style="position: absolute; right: 15px; top: 50%; transform: translateY(-50%); cursor: pointer;"></i>
+                </div>
             </div>
 
-            <button type="submit" class="btn btn-primary" style="width: 100%;">
-                <i class="fas fa-sign-in-alt"></i> Autentificare
-            </button>
+            <div class="form-group" style="margin-top: 30px;">
+                <button type="submit" class="btn btn-primary" style="width: 100%;">
+                    <i class="fas fa-sign-in-alt"></i> Autentificare
+                </button>
+            </div>
+
+            <div id="error-message" style="color: var(--danger); text-align: center; margin-top: 15px; display: none;"></div>
         </form>
     </div>
 </div>
+
 <script src="admin.js"></script>
+
 </body>
 </html>
